--- a/hood.html
+++ b/hood.html
@@ -24,5 +24,10 @@
             <li><a href="https://mountaintrails.org/trail/round-valley/">Round Valley</a></li>
         </ul>
     </div>
+    <form>
+        Random Restaurant Recommendation:
+        <button id="random">Yum! Yum!</button>
+    </form>
+    <script src="./hood.js"></script>
 </body>
 </html>
