--- a/hood.html
+++ b/hood.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Neighborhood</title>
+    <link href="hood.css" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -24,8 +25,8 @@
             <li><a href="https://mountaintrails.org/trail/round-valley/">Round Valley</a></li>
         </ul>
     </div>
-    <form>
-        Random Restaurant Recommendation:
+    <form id="eat">
+        <p>Random Restaurant Recommendation:</p>
         <button id="random">Yum! Yum!</button>
     </form>
     <script src="./hood.js"></script>
